tests/specs/ecosystem/sisou/nimiq_ts/0_1_0.test
sisou/nimiq-ts/0.1.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2416 [ERROR]: Property 'subarray' in type 'SerialBuffer' is not assignable to the same property in base type 'Uint8Array<ArrayBuffer>'.
  Type '(start?: number | undefined, end?: number | undefined) => Uint8Array<ArrayBufferLike>' is not assignable to type '(begin?: number | undefined, end?: number | undefined) => Uint8Array<ArrayBuffer>'.
    Type 'Uint8Array<ArrayBufferLike>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
      Type 'ArrayBufferLike' is not assignable to type 'ArrayBuffer'.
        Type 'SharedArrayBuffer' is missing the following properties from type 'ArrayBuffer': resizable, resize, detached, transfer, transferToFixedLength
  override subarray(start?: number, end?: number): Uint8Array {
           ~~~~~~~~
    at file://<tmpdir>/src/SerialBuffer.ts:11:12

error: Type checking failed.

